--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>TITULO DA ABA</title>
+  <meta name='viewport' content='width=device-width,inicial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <script src='main.js'></script>
+</head>
+<body>
+  <header><p><img id="TITULOIMAGEM" src="logo.jpeg"alt="DESCRICAO-IMAGEM"></p>
+  <nav>
+    <ul id="lista01">
+      <li><a target="_blank" href="index.html">home</li>
+      <li><a target="_blank"
+  href="http://www.fecebook.com/profile.php?
+  id=100009582499964">fecebook</li></a>
+    </ul>
+  </nav>
+  </header>
+  <main>
+    <h1>biologia</h1>
+    <div class="PRIMEIROPARAGRAFO">
+      <h3>desenvolvimento sustentavel</h3>
+      <P><i><b>TEXTO</b></i></P>
+      <ul id="lista02">
+        <li>LISTA</li>
+        <li>linha</li>
+        <li>lista</li>
+      </ul>
+    </div>
+    <h1>***</h1>
+  </main>
+  <footer><p><img id="TITULOIMAGEM" src="logo.jpeg"
+alt="DESCRICAO IMAGEM"></p></footer>
+</body>
+</html>
