--- a/index.html
+++ b/index.html
@@ -23,11 +23,39 @@
     <h1>biologia</h1>
     <div class="PRIMEIROPARAGRAFO">
       <h3>desenvolvimento sustentavel</h3>
-      <P><i><b>TEXTO</b></i></P>
-      <ul id="lista02">
-        <li>LISTA</li>
-        <li>linha</li>
-        <li>lista</li>
+      <P><i><b>Desenvolvimento sustentável procura aliar a preservação ambiental ao progresso socioeconômico e político dos países, e isso depende dos Estados, sociedade civil e empresas.Desenvolvimento sustentável se refere a um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente. Isso significa que é preciso fazer a utilização racional dos recursos naturais de forma que seja possível suprir as necessidades da sociedade atual, mas sem que haja o comprometimento da disponibilidade desses mesmos recursos para as gerações futuras. Essa é a definição mais amplamente utilizada de desenvolvimento sustentável, apresentada no Relatório Nosso Futuro Comum, no ano de 1987, produzido no âmbito da Comissão Mundial sobre Meio Ambiente e Desenvolvimento.</b></i></P>
+      <ul id=Definição de desenvolvimento sustentável
+A expressão desenvolvimento sustentável designa um modelo de desenvolvimento que visa a articular o progresso econômico, social e político dos Estados nacionais com a preservação ambiental, levando em consideração a finitude da maioria dos recursos naturais de que a sociedade faz uso.>
+        <li>Diante disso, as Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem cumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.
+
+Entre as metas determinadas estão a erradicação da pobreza e da fome, a igualdade social e de gênero, o acesso ao saneamento, a garantia de educação de qualidade e a proteção e conservação dos ecossistemas terrestres e marinhos. O alcance desse modelo de desenvolvimento depende de esforços coletivos, que incluem a ação da sociedade civil, das empresas e dos Estados nacionais.</li>
+        <li>As discussões a cerca da urgência em se repensar o modelo industrial produtivo (que teve início com a Revolução Industrial e transformou definitivamente as relações homem-natureza) ganharam mais força a partir da segunda metade do século XX. À época, o esgotamento dos recursos naturais e os impactos mais severos da ação antrópica sobre o meio ambiente já davam os seus primeiros sinais, demonstrando que não seria possível a manutenção do modelo de desenvolvimento em voga sem consequências no longo prazo. Era preciso, portanto, reformulá-lo.
+
+Quase uma década antes do estabelecimento da definição do que seja o desenvolvimento sustentável, realizou-se a Conferência das Nações Unidas pelo Meio Ambiente em 1972, na cidade de Estocolmo, na Suécia, onde se levantou questões a respeito do progresso econômico e industrial da sociedade em contraposição à preservação ambiental.</li>
+        <li>Exemplos de ações sustentáveis
+As ações sustentáveis são aquelas que promovem o uso equilibrado e racional dos recursos naturais a fim de se preservar o meio ambiente. A sua prática não é unilateral, e depende da sociedade civil, das empresas e dos representantes dos Estados. Além disso, elas podem ser desenvolvidas de forma individual ou em conjunto, e abranger desde pequenos gestos do dia a dia até ações de grande escala.Listamos abaixo algumas das práticas consideradas sustentáveis. Destacamos que muitas outras podem ser elencadas e seguidas, sendo essa questão bastante abrangente.
+
+Descarte adequado do lixo e dos rejeitos tanto domésticos quanto industriais;
+
+Separação correta do lixo orgânico e não orgânico, além da realização da coletiva seletiva e práticas de reciclagem;
+
+Utilização de energias limpas e renováveis, como é o caso da energia solar;
+
+Adoção de meios alternativos de transporte que sejam menos poluentes ou, ainda, a priorização do transporte coletivo em detrimento do individual;
+
+Utilização de produtos que sejam biodegradáveis, evitando o uso de artigos feitos com plástico e outros materiais que levam muito tempo para se decompor na natureza e podem, dessa forma, poluir ecossistemas terrestres e marinhos;
+
+Evitar o desperdício de água;
+
+Economizar energia elétrica;
+
+Praticar o consumo consciente, atentando-se à certificação ambiental e procedência dos produtos;
+
+Redução do desmatamento e da prática de queimadas;
+
+Criação de áreas de proteção ambiental e realização da fiscalização devida;
+
+Promoção de ações de reflorestamento.</li>
       </ul>
     </div>
     <h1>***</h1>
