--- a/index.html
+++ b/index.html
@@ -23,7 +23,33 @@
     <h1>biologia</h1>
     <div class="PRIMEIROPARAGRAFO">
       <h3>desenvolvimento sustentavel</h3>
-      <P><i><b>Desenvolvimento sustentável procura aliar a preservação ambiental ao progresso socioeconômico e político dos países, e isso depende dos Estados, sociedade civil e empresas.Desenvolvimento sustentável se refere a um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente. Isso significa que é preciso fazer a utilização racional dos recursos naturais de forma que seja possível suprir as necessidades da sociedade atual, mas sem que haja o comprometimento da disponibilidade desses mesmos recursos para as gerações futuras. Essa é a definição mais amplamente utilizada de desenvolvimento sustentável, apresentada no Relatório Nosso Futuro Comum, no ano de 1987, produzido no âmbito da Comissão Mundial sobre Meio Ambiente e Desenvolvimento.</b></i></P>
+      <P><i><b>Desenvolvimento sustentável procura aliar a preservação ambiental ao progresso socioeconômico e político dos países, e isso depende dos Estados, sociedade civil e empresas.Desenvolvimento sustentável se refere a um modelo de desenvolvimento econômico, social e político que esteja em harmonia com o meio ambiente. Isso significa que é preciso fazer a utilização racional dos recursos naturais de forma que seja possível suprir as necessidades da sociedade atual, mas sem que haja o comprometimento da disponibilidade desses mesmos recursos para as gerações futuras. Essa é a definição mais amplamente utilizada de desenvolvimento sustentável, apresentada no Relatório Nosso Futuro Comum, no ano de 1987, produzido no âmbito da Comissão Mundial sobre Meio Ambiente e Desenvolvimento.O desenvolvimento sustentável é um conceito que visa promover o equilíbrio entre crescimento econômico, inclusão social e proteção ambiental. Segundo a Comissão Brundtland (1987), o desenvolvimento sustentável é aquele que atende às necessidades do presente sem comprometer a capacidade das futuras gerações de atenderem suas próprias necessidades. Esse modelo propõe uma abordagem integrada que considera o meio ambiente como essencial para o bem-estar humano.
+
+Um dos pilares do desenvolvimento sustentável é a gestão responsável dos recursos naturais. Isso envolve práticas que minimizam o desperdício e garantem o uso eficiente dos recursos. A agricultura sustentável, por exemplo, busca aumentar a produtividade sem degradar o solo ou os ecossistemas, utilizando técnicas como rotação de culturas, agroflorestas e cultivo orgânico. Essas práticas não apenas preservam a fertilidade do solo, mas também reduzem a dependência de produtos químicos prejudiciais.
+
+Além disso, a conservação da biodiversidade é fundamental para a sustentabilidade. Ecossistemas saudáveis fornecem serviços essenciais, como polinização, controle de pragas e regulação do ciclo da água. A proteção de áreas naturais e a criação de corredores ecológicos ajudam a manter esses serviços e garantem a sobrevivência de espécies ameaçadas.
+
+Outro aspecto crucial é a inclusão social. O desenvolvimento sustentável não se limita ao crescimento econômico; ele também busca reduzir desigualdades e promover oportunidades para todos. Isso significa garantir acesso à educação, saúde e serviços básicos, especialmente para comunidades marginalizadas. Projetos de habitação sustentável que integram pessoas de diferentes classes sociais são exemplos de como é possível promover uma sociedade mais justa e coesa.
+
+O empoderamento das mulheres e a promoção da igualdade de gênero são essenciais para alcançar um desenvolvimento verdadeiramente sustentável. Quando as mulheres têm acesso à educação e oportunidades econômicas, elas podem contribuir significativamente para suas comunidades e para o desenvolvimento econômico em geral.
+
+A proteção ambiental é igualmente crucial. Mudanças climáticas, poluição e perda de biodiversidade são desafios globais que exigem ação coletiva. A transição para fontes de energia renováveis, como solar e eólica, é uma estratégia vital para reduzir as emissões de gases de efeito estufa e mitigar os impactos das mudanças climáticas. Países que investem em energias limpas não apenas contribuem para um planeta mais saudável, mas também geram empregos sustentáveis em novos setores.
+
+A educação ambiental desempenha um papel fundamental na promoção do desenvolvimento sustentável. Ao educar as comunidades sobre práticas sustentáveis e os impactos da poluição, podemos fomentar uma cultura de responsabilidade ambiental. Programas escolares que ensinam sobre reciclagem, conservação da água e energia são exemplos eficazes de como preparar as futuras gerações para serem cidadãos conscientes.
+
+Para implementar o desenvolvimento sustentável, é necessário um esforço conjunto entre governos, empresas e sociedade civil. Políticas públicas eficazes podem criar incentivos para práticas sustentáveis, enquanto as empresas podem adotar modelos de negócios que priorizam a responsabilidade ambiental e social. O conceito de economia circular — onde os resíduos são minimizados e os produtos são reciclados ou reutilizados — está ganhando destaque como uma abordagem inovadora para reduzir a pressão sobre os recursos naturais.
+
+Em resumo, o desenvolvimento sustentável é uma abordagem abrangente que busca harmonizar crescimento econômico, equidade social e proteção ambiental. Ao adotar esse modelo, podemos construir um futuro mais próspero e equilibrado para as próximas gerações, garantindo que todos tenham acesso a um ambiente saudável e recursos suficientes para viver dignamente.
+
+---
+
+*Referência sugerida (formato UEM):*
+
+COMISSÃO BRUNDTLAND. Nosso futuro comum. Brasília: Editora da Universidade de Brasília, 1987.
+
+---
+
+Se precisar de mais informações ou quiser discutir outros aspectos do desenvolvimento sustentável ou qualquer outro tema relacionado, estou aqui para ajudar!</b></i></P>
       <ul id=Definição de desenvolvimento sustentável
 A expressão desenvolvimento sustentável designa um modelo de desenvolvimento que visa a articular o progresso econômico, social e político dos Estados nacionais com a preservação ambiental, levando em consideração a finitude da maioria dos recursos naturais de que a sociedade faz uso.>
         <li>Diante disso, as Nações Unidas propuseram, no ano de 2015, a chamada Agenda 2030. Trata-se de um plano de ações que estabelece 17 objetivos a serem cumpridos pelos países-membros até o ano de 2030 para se atingir o desenvolvimento sustentável.
