--- a/index.html
+++ b/index.html
@@ -81,12 +81,9 @@ Redução do desmatamento e da prática de queimadas;
 
 Criação de áreas de proteção ambiental e realização da fiscalização devida;
 
-Promoção de ações de reflorestamento.
-        Conheça os 17 Objetivos de Desenvolvimento Sustentável:
+Promoção de ações de reflorestamento.Conheça os 17 Objetivos de Desenvolvimento Sustentável:
 
- 
-
-1 – Erradicação da Pobreza – Erradicar a pobreza em todas as formas e em todos os lugares;
+ 1 – Erradicação da Pobreza – Erradicar a pobreza em todas as formas e em todos os lugares;
 
 2 – Fome zero e agricultura sustentável – Erradicar a fome, alcançar a segurança alimentar, melhorar a nutrição e promover a agricultura sustentável;
 
