--- a/index.html
+++ b/index.html
@@ -85,39 +85,39 @@ Promoção de ações de reflorestamento.Conheça os 17 Objetivos de Desenvolvim
 
  
 
-1 – Erradicação da Pobreza – Erradicar a pobreza em todas as formas e em todos os lugares;
+<br/>1 – Erradicação da Pobreza – Erradicar a pobreza em todas as formas e em todos os lugares;
 
-2 – Fome zero e agricultura sustentável – Erradicar a fome, alcançar a segurança alimentar, melhorar a nutrição e promover a agricultura sustentável;
+<br/>2 – Fome zero e agricultura sustentável – Erradicar a fome, alcançar a segurança alimentar, melhorar a nutrição e promover a agricultura sustentável;
 
-3 – Saúde e Bem-Estar – Garantir o acesso à saúde de qualidade e promover o bem-estar para todos, em todas as idades;
+<br/>3 – Saúde e Bem-Estar – Garantir o acesso à saúde de qualidade e promover o bem-estar para todos, em todas as idades;
 
-4 – Educação de qualidade – Garantir o acesso à educação inclusiva, de qualidade e equitativa, e promover oportunidades de aprendizagem ao longo da vida para todos;
+<br/>4 – Educação de qualidade – Garantir o acesso à educação inclusiva, de qualidade e equitativa, e promover oportunidades de aprendizagem ao longo da vida para todos;
 
-5 – Igualdade de gênero – Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas;
+<br/>5 – Igualdade de gênero – Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas;
 
-6 – Água potável e saneamento – Garantir a disponibilidade e a gestão sustentável da água potável e do saneamento para todos;
+<br/>6 – Água potável e saneamento – Garantir a disponibilidade e a gestão sustentável da água potável e do saneamento para todos;
 
-7 – Energia limpa e acessível – Garantir o acesso a fontes de energia fiáveis, sustentáveis e modernas para todos;
+<br/>7 – Energia limpa e acessível – Garantir o acesso a fontes de energia fiáveis, sustentáveis e modernas para todos;
 
-8 – Trabalho decente e crescimento econômico – Promover o crescimento econômico inclusivo e sustentável, o emprego pleno e produtivo e o trabalho digno para todos;
+<br/>8 – Trabalho decente e crescimento econômico – Promover o crescimento econômico inclusivo e sustentável, o emprego pleno e produtivo e o trabalho digno para todos;
 
-9 – Indústria, inovação e infraestrutura – Construir infraestruturas resilientes, promover a industrialização inclusiva e sustentável e fomentar a inovação;
+<br/>9 – Indústria, inovação e infraestrutura – Construir infraestruturas resilientes, promover a industrialização inclusiva e sustentável e fomentar a inovação;
 
-10 – Redução das desigualdades – Reduzir as desigualdades no interior dos países e entre países;
+<br/>10 – Redução das desigualdades – Reduzir as desigualdades no interior dos países e entre países;
 
-11 – Cidades e comunidades sustentáveis – Tornar as cidades e comunidades mais inclusivas, seguras, resilientes e sustentáveis;
+<br/>11 – Cidades e comunidades sustentáveis – Tornar as cidades e comunidades mais inclusivas, seguras, resilientes e sustentáveis;
 
-12 – Consumo e produção responsáveis – Garantir padrões de consumo e de produção sustentáveis;
+<br/>12 – Consumo e produção responsáveis – Garantir padrões de consumo e de produção sustentáveis;
 
-13 – Ação contra a mudança global do clima – Adotar medidas urgentes para combater as alterações climáticas e os seus impactos;
+<br/>13 – Ação contra a mudança global do clima – Adotar medidas urgentes para combater as alterações climáticas e os seus impactos;
 
-14 – Vida na água – Conservar e usar de forma sustentável os oceanos, mares e os recursos marinhos para o desenvolvimento sustentável;
+<br/>14 – Vida na água – Conservar e usar de forma sustentável os oceanos, mares e os recursos marinhos para o desenvolvimento sustentável;
 
-15 – Vida terrestre – Proteger, restaurar e promover o uso sustentável dos ecossistemas terrestres, gerir de forma sustentável as florestas, combater a desertificação, travar e reverter a degradação dos solos e travar a perda da biodiversidade;
+<br/>15 – Vida terrestre – Proteger, restaurar e promover o uso sustentável dos ecossistemas terrestres, gerir de forma sustentável as florestas, combater a desertificação, travar e reverter a degradação dos solos e travar a perda da biodiversidade;
 
-16 – Paz, Justiça e Instituições Eficazes – Promover sociedades pacíficas e inclusivas para o desenvolvimento sustentável, proporcionar o acesso à justiça para todos e construir instituições eficazes, responsáveis e inclusivas a todos os níveis;
+<br/>16 – Paz, Justiça e Instituições Eficazes – Promover sociedades pacíficas e inclusivas para o desenvolvimento sustentável, proporcionar o acesso à justiça para todos e construir instituições eficazes, responsáveis e inclusivas a todos os níveis;
 
-17 – Parcerias e meios de implementação – Reforçar os meios de implementação e revitalizar a parceria global para o desenvolvimento sustentável.</li>
+<br/>17 – Parcerias e meios de implementação – Reforçar os meios de implementação e revitalizar a parceria global para o desenvolvimento sustentável.</li>
       </ul>
     </div>
     <h1>***</h1>
